tests/baselines/reference/functionAndPropertyNameConflict.errors.txt
==== tests/cases/compiler/functionAndPropertyNameConflict.ts (1 errors) ====
    class C65 {
        public aaaaa() { }
        public get aaaaa() {
                   ~~~~~
!!! error TS2000: Duplicate identifier 'aaaaa'.
            return 1;
        }
    }